--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.5",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
+    "react-scroll-to-top": "^3.0.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0"
   },
