--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.5",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-rating-stars-component": "^2.2.0",
