--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# VITE_BACKEND_API=https://drakon-backend.onrender.com
+VITE_BACKEND_API=https://drakon-backend.onrender.com
 
-VITE_BACKEND_API=http://localhost:3500
+# VITE_BACKEND_API=http://localhost:3500
