--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "antd": "^5.20.1",
     "aos": "^2.3.4",
     "axios": "^1.7.4",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
