--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# VITE_BACKEND_API=https://drakon-backend.onrender.com
+# VITE_BACKEND_API=https://drakon-backend-79ru.onrender.com
 
 VITE_BACKEND_API=http://localhost:3500
