--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@reduxjs/toolkit": "^2.2.3",
-    "antd": "^5.16.5",
+    "antd": "^5.24.3",
     "axios": "^1.6.8",
+    "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
