--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@reduxjs/toolkit": "^2.2.3",
-    "antd": "^5.24.3",
+    "antd": "^5.24.4",
     "axios": "^1.6.8",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
@@ -28,8 +28,11 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scroll-to-top": "^3.0.0",
+    "react-slick": "^0.30.3",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
