--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "antd": "^5.24.4",
     "axios": "^1.6.8",
     "framer-motion": "^12.5.0",
