--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
